# CurvesApproximator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
func/: approximator.py  helper.py
